<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textview_title_ingreso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ingresos"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"



        />

    <TextView
        android:id="@+id/textview_ordenar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_ordenar_por"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_margin="8dp"
        android:layout_below="@+id/textview_title_ingreso"
        app:layout_constraintTop_toBottomOf="@+id/textview_title_ingreso"
        app:layout_constraintStart_toStartOf="parent"



        />

    <Button
        android:id="@+id/btn_sort_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:drawableStart="@drawable/calendar"
        android:text="@string/btn_fecha"
        app:layout_constraintStart_toEndOf="@+id/textview_ordenar"
        app:layout_constraintTop_toBottomOf="@+id/textview_title_ingreso" />

    <Button
        android:id="@+id/btn_sort_monto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:drawableStart="@drawable/money"
        android:text="@string/btn_monto"
        app:layout_constraintStart_toEndOf="@+id/btn_sort_fecha"
        app:layout_constraintTop_toBottomOf="@+id/textview_title_ingreso" />

    <Button
        android:id="@+id/btn_sort_letra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:drawableStart="@drawable/alphabet"
        android:text="@string/btn_letra"
        app:layout_constraintStart_toEndOf="@+id/btn_sort_monto"
        app:layout_constraintTop_toBottomOf="@+id/textview_title_ingreso" />




    <ListView
        android:id="@+id/listview_ingresos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sort_fecha"
        app:layout_constraintBottom_toTopOf="@+id/btn_Atras"
        android:layout_margin="16dp"
        />







    <Button
        android:id="@+id/btn_Atras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_atras"
        android:background="@color/red"
        android:textColor="@color/white"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/listview_ingresos"


        />


</androidx.constraintlayout.widget.ConstraintLayout>